--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,11 +18,8 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "react/react-in-jsx-scope": "off"
   }
 }
